OK: CRUD Autores. TODO: libros prestamos y miembros

--- a/src/views/autores/editar.ejs
+++ b/src/views/autores/editar.ejs
@@ -8,17 +8,18 @@
 <body>
   <h1>Editar autor <%= autor.alias %></h1>
   <form action="/autores/editar" method="post">
+    <input readonly hidden type="text" name="id" id="id" value="<%=autor.id%>" />
     <div>
       <label for="nombre">Nombre</label>
-      <input type="text" name="nombre" id="nombre">
+      <input type="text" name="nombre" id="nombre" value="<%=autor.nombre%>">
     </div>
     <div>
       <label for="alias">Alias</label>
-      <input type="text" name="alias" id="alias">
+      <input value="<%=autor.alias%>" type="text" name="alias" id="alias">
     </div>
     <div>
       <label for="fechaNacimiento">Fecha de nacimiento</label>
-      <input type="text" name="fechaNacimiento" id="fechaNacimiento">
+      <input value="<%=fechaFormateada%>" type="date" name="fechaNacimiento" id="fechaNacimiento">
     </div>
     <div>
       <button type="submit">Guardar</button>
